--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="employee">
                         <img src="/images/pexels-tim-savage-736716.jpg" />
                         <div>
-                            <p class="description-employee">
+                            <p class="description-employee2" >
                             <strong>Imię Nazwisko [dział]</strong><br/><br/>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel explicabo voluptatem molestiae maxime asperiores non impedit quasi nulla molestias eveniet quaerat aut, cum omnis minus similique exercitationem? Labore, minima. Esse?</p>
                         </div>
                     </div>
